<?xml version="1.0"?>
<package format="2">
  <name>dlib</name>
  <version>0.0.0</version>
  <description>dorian3d/Dlib fork</description>

  <author>Manuel Werlberger</author>
  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>
  <license>BSD-3</license>

  <depend>catkin</depend> -->
  <buildtool_depend>cmake</buildtool_depend> -->
  <depend>cv_bridge</depend>
  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
