<?xml version="1.0"?>
<package format="2">
  <name>dlib</name>
  <version>0.0.1</version>
  <description>dorian3d/Dlib fork</description>

  <author>Manuel Werlberger</author>
  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>catkin_simple</buildtool_depend> -->
  <depend>cv_bridge</depend>
  <!-- <depend>boost</depend> -->
</package>
